--- a/CreateMonster/app/src/main/res/layout/activity_creature.xml
+++ b/CreateMonster/app/src/main/res/layout/activity_creature.xml
@@ -129,4 +129,14 @@
         app:layout_constraintTop_toBottomOf="@+id/hitPointsLabel"
         tools:text="999" />
 
+    <Button
+        android:id="@+id/saveButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dp_16"
+        android:text="@string/save"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/hitPoints" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
